src/objects/Xero_Address__c.object
<CustomObject>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>AddressLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>AddressLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine3__c</fullName>
        <label>AddressLine3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressType__c</fullName>
        <label>AddressType</label>
        <picklist>
            <picklistValues>
                <fullName>STREET</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>POBOX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Xero Contact</label>
        <referenceTo>Xero_Contact__c</referenceTo>
        <relationshipLabel>Xero Addresses</relationshipLabel>
        <relationshipName>Xero_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Xero Address</label>
    <nameField>
        <label>Xero Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>